--- a/articles/dns/TOC.yml
+++ b/articles/dns/TOC.yml
@@ -84,6 +84,8 @@ items:
     href: dns-import-export.md
   - name: Delegera en underdomän
     href: delegate-subdomain.md
+  - name: Delegera en underdomän med PowerShell
+    href: delegate-subdomain-ps.md
   - name: Integrera med andra Azure-tjänster
     href: dns-for-azure-services.md
   - name: Skydda DNS-zoner och -poster
@@ -148,9 +150,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=dns
-ms.openlocfilehash: ac539c7b7454a642a8bc1d36ef01a5e7a232375d
-ms.sourcegitcommit: 9b6492fdcac18aa872ed771192a420d1d9551a33
+ms.openlocfilehash: 155b03b0625a4be1fcca6d02984a3c3497559e78
+ms.sourcegitcommit: e51e940e1a0d4f6c3439ebe6674a7d0e92cdc152
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/22/2019
-ms.locfileid: "54446372"
+ms.lasthandoff: 02/08/2019
+ms.locfileid: "55890645"
