--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -512,14 +512,14 @@ items:
       href: ../blobs/data-lake-storage-data-scenarios.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
   - name: Snabbstarter
     items:
-    - name: Skapa ett Data Lake Storage Gen2-kompatibelt Storage-konto
+    - name: Skapa ett Storage-konto
       href: ../blobs/data-lake-storage-quickstart-create-account.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-    - name: Skapa/ansluta Databricks-konto
+    - name: Hantera data med Storage Explorer
+      href: ../blobs/data-lake-storage-explorer.md
+    - name: Analysera data med Databricks
       href: ../blobs/data-lake-storage-quickstart-create-databricks-account.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: Skapa ett HDInsight-kluster
       href: ../blobs/data-lake-storage-quickstart-create-connect-hdi-cluster.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-    - name: Komma igång med Azure Storage Explorer
-      href: ../blobs/data-lake-storage-explorer.md
   - name: Självstudier
     items:
     - name: Extrahera, transformera och läsa in data med Azure Databricks
@@ -530,9 +530,9 @@ items:
       href: ../blobs/data-lake-storage-tutorial-extract-transform-load-hive.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
   - name: Begrepp
     items:
-    - name: Drivrutin för Azure Blob FileSystem för Hadoop
+    - name: Drivrutin för Azure Blob-filsystemet för Hadoop
       href: ../blobs/data-lake-storage-abfs-driver.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-    - name: Introduktion till URI för Azure Blob-filsystemet
+    - name: URI för Azure Blob-filsystemet
       href: ../blobs/data-lake-storage-introduction-abfs-uri.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: Tjänsten Hierarkisk namnrymd
       href: ../blobs/data-lake-storage-namespace.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
@@ -546,53 +546,57 @@ items:
         href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Kryptering för vilande data med kundnycklar
         href: ../common/storage-service-encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-      - name: Åtkomstkontroll i Azure Data Lake Storage Gen2
+      - name: Åtkomstkontroll
         href: data-lake-storage-access-control.md
-      - name: Konfigurera brandväggar och virtuella nätverk
-        href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-      - name: Autentisering
-        items:
-        - name: Hantera åtkomstbehörighet med RBAC
-          href: ../common/storage-auth-aad-rbac.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
   - name: Gör så här för att
     items:
-    - name: Ange behörigheter med Azure Storage Explorer
-      href: ../blobs/data-lake-storage-how-to-set-permissions-storage-explorer.md
-    - name: Använda Data Lake Storage Gen2 med Azure HDInsight-kluster
-      href: ../blobs/data-lake-storage-use-hdi-cluster.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-    - name: Använda CLI för Hadoop-filsystemet med Data Lake Storage Gen2
-      href: ../blobs/data-lake-storage-use-hdfs-data-lake-storage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-    - name: Uppgradera från Data Lake Storage Gen1
-      href: ../blobs/data-lake-storage-upgrade.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: Mata in data
       items:
-      - name: Kopiera data till Data Lake Storage Gen2 med Distcp
+      - name: Använda Distcp
         href: ../blobs/data-lake-storage-use-distcp.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-      - name: Kopiera data till Data Lake Storage Gen2 med Azure Data Factory
+      - name: Använda Azure Data Factory
         href: ../../data-factory/load-azure-data-lake-storage-gen2.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-    - name: Prestanda
+    - name: Skydda data
+      items:
+      - name: Konfigurera brandväggar och virtuella nätverk
+        href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+      - name: Hantera åtkomstbehörighet med RBAC
+        href: ../common/storage-auth-aad-rbac.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+      - name: Ange behörighet för filer och kataloger
+        href: ../blobs/data-lake-storage-how-to-set-permissions-storage-explorer.md
+    - name: Integrera med Azure-tjänster
+      items:
+      - name: Använda med HDInsight-kluster
+        href: ../blobs/data-lake-storage-use-hdi-cluster.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+      - name: Använda med CLI för Hadoop File System
+        href: ../blobs/data-lake-storage-use-hdfs-data-lake-storage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+      - name: Använda med Azure Databricks
+        href: https://docs.azuredatabricks.net/spark/latest/data-sources/azure/azure-datalake-gen2.html
+      - name: Använda med Azure SQL Data Warehouse
+        href: ../../sql-database/sql-database-vnet-service-endpoint-rule-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json#azure-sql-data-warehouse-polybase
+    - name: Optimera prestanda
       items:
       - name: Översikt
         href: ../blobs/data-lake-storage-performance-tuning-guidance.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-      - name: Använda Spark på HDInsight
+      - name: Optimera Spark på HDInsight
         href: ../blobs/data-lake-storage-performance-tuning-spark.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-      - name: Använda Hive på HDInsight
+      - name: Optimera Hive på HDInsight
         href: ../blobs/data-lake-storage-performance-tuning-hive.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-      - name: Använda MapReduce på HDInsight
+      - name: Optimera MapReduce på HDInsight
         href: ../blobs/data-lake-storage-performance-tuning-mapreduce.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-      - name: Använda Storm på HDInsight
+      - name: Optimera Storm på HDInsight
         href: ../blobs/data-lake-storage-performance-tuning-storm.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-    - name: Ansluta till Azure Databricks
-      href: https://docs.azuredatabricks.net/spark/latest/data-sources/azure/azure-datalake-gen2.html
-    - name: Anslut till Azure SQL Data Warehouse
-      href: ../../sql-database/sql-database-vnet-service-endpoint-rule-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json#azure-sql-data-warehouse-polybase
+    - name: Migrera data
+      items:
+      - name: Uppgradera från Data Lake Storage Gen1
+        href: ../blobs/data-lake-storage-upgrade.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
   - name: Referens
     items:
     - name: REST
       href: https://docs.microsoft.com/rest/api/storageservices/data-lake-storage-gen2
   - name: Resurser
     items:
-    - name: Kända problem i Data Lake Storage Gen2
+    - name: Kända problem
       href: data-lake-storage-known-issues.md
     - name: Azure-översikt
       href: https://azure.microsoft.com/roadmap/?category=storage
@@ -610,9 +614,9 @@ items:
       href: http://stackoverflow.com/questions/tagged/windows-azure-storage
     - name: Videoklipp
       href: https://azure.microsoft.com/documentation/videos/index/?services=storage
-ms.openlocfilehash: dec146846ac3bf889ac0d694fc769c899ab1d12e
-ms.sourcegitcommit: 415742227ba5c3b089f7909aa16e0d8d5418f7fd
+ms.openlocfilehash: 546184e0552bbd0a5a3cc8ba864fba8794428dec
+ms.sourcegitcommit: 90cec6cccf303ad4767a343ce00befba020a10f6
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/06/2019
-ms.locfileid: "55767674"
+ms.lasthandoff: 02/07/2019
+ms.locfileid: "55870528"
