--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -463,8 +463,12 @@ items:
     href: how-to-manage-database-account.md
   - name: Global distribution
     items:
+    - name: Konfigurera flera original
+      href: how-to-multi-master.md
     - name: Hantera konsekvensnivåer
       href: how-to-manage-consistency.md
+    - name: Implementera anpassad synkronisering
+      href: how-to-custom-synchronization.md
     - name: Konfigurera konfliktlösningsprinciper
       href: how-to-manage-conflicts.md
   - name: Etablerat dataflöde
@@ -595,10 +599,10 @@ items:
     items:
     - name: Om bibliotek för massexecutor
       href: bulk-executor-overview.md
-- name: Felsökningsguider
-  items:
-  - name: Felsöka Java Async SDK
-    href: troubleshoot-java-async-sdk.md
+  - name: Felsöka
+    items:
+    - name: Felsöka Java Async SDK
+      href: troubleshoot-java-async-sdk.md
 - name: Resurser
   items:
   - name: Utveckla dina färdigheter med Microsoft Learn
@@ -627,9 +631,9 @@ items:
       href: use-cases.md
     - name: Appar för sociala medier
       href: social-media-apps.md
-ms.openlocfilehash: da87cea310f5bda952cfa014d7b45e23e555efcf
-ms.sourcegitcommit: 947b331c4d03f79adcb45f74d275ac160c4a2e83
+ms.openlocfilehash: 72a6dced29f09379453d0e33131f78e875b2c9f2
+ms.sourcegitcommit: 301128ea7d883d432720c64238b0d28ebe9aed59
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/05/2019
-ms.locfileid: "55746191"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "56163504"
