--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -117,6 +117,28 @@ items:
     href: concepts-pipeline-execution-triggers.md
   - name: Integration runtime
     href: concepts-integration-runtime.md
+  - name: Mappa dataflöden
+    items:
+    - name: Mappa koncept för Dataflöde
+      href: concepts-data-flow-overview.md
+    - name: Felsökningsläge
+      href: concepts-data-flow-debug-mode.md
+    - name: Drift-schema
+      href: concepts-data-flow-schema-drift.md
+    - name: Granskningsfönster
+      href: concepts-data-flow-inspect-pane.md
+    - name: Kolumnmönster
+      href: concepts-data-flow-column-pattern.md
+    - name: Dataflödesövervakning
+      href: concepts-data-flow-monitoring.md
+    - name: Flytta noder
+      href: concepts-data-flow-move-nodes.md
+    - name: Fliken Optimera
+      href: concepts-data-flow-optimize-tab.md
+    - name: Uttrycksverktyget
+      href: concepts-data-flow-expression-builder.md
+    - name: Referensnoder
+      href: concepts-data-flow-reference-node.md
   - name: Roller och behörigheter
     href: concepts-roles-permissions.md
   - name: Förstå prissättningen
@@ -506,9 +528,9 @@ items:
     href: https://azure.microsoft.com/global-infrastructure/services/
   - name: Supportalternativ
     href: https://azure.microsoft.com/support/options/
-ms.openlocfilehash: c73a736dadee91f344da32fb5569d5809a382f1b
-ms.sourcegitcommit: d1c5b4d9a5ccfa2c9a9f4ae5f078ef8c1c04a3b4
+ms.openlocfilehash: 535abc50cd27693da90aaaddcfdf8950d6abc59d
+ms.sourcegitcommit: 301128ea7d883d432720c64238b0d28ebe9aed59
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/08/2019
-ms.locfileid: "55960249"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "56174426"
