--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -166,13 +166,13 @@ items:
       href: application-gateway-create-probe-ps.md
   - name: Felsöka
     items:
-    - name: Felsöka Application Gateway – Intern lastbalanserare (ILB) med App Service-miljön (ASE)
+    - name: ILB med en App Service-miljö
       href: create-gateway-internal-load-balancer-app-service-environment.md
-    - name: Felsöka Application Gateway med App Service – omdirigering till App Service-URL:en
+    - name: Omdirigering till App Service-URL
       href: troubleshoot-app-service-redirection-app-service-url.md
-    - name: Felsöka sessionstillhörighetsproblem i Azure Application Gateway
+    - name: Problem med sessionstillhörighet
       href: how-to-troubleshoot-application-gateway-session-affinity-issues.md
-    - name: Felsöka fel med felaktig gateway (502)
+    - name: Fel med felaktig gateway (502)
       href: application-gateway-troubleshooting-502.md
     - name: Diagnostik
       href: application-gateway-diagnostics.md
@@ -212,9 +212,9 @@ items:
     href: https://azure.microsoft.com/regions/services/
   - name: Stack Overflow
     href: https://stackoverflow.com/questions/tagged/azure-application-gateway
-ms.openlocfilehash: 7fd344a06dcd29c53d313a59c484101b1d0b2c8f
-ms.sourcegitcommit: 1afd2e835dd507259cf7bb798b1b130adbb21840
+ms.openlocfilehash: 7fe790e7b75e3cf6bead50635b7be690b1b7eeb7
+ms.sourcegitcommit: 3f4ffc7477cff56a078c9640043836768f212a06
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/28/2019
-ms.locfileid: "56985673"
+ms.lasthandoff: 03/04/2019
+ms.locfileid: "57309051"
