--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -134,10 +134,14 @@ items:
       href: create-function-app-linux-app-service-plan.md
     - name: Hantera anslutningar
       href: manage-connections.md
+    - name: Felhantering
+      href: functions-bindings-error-pages.md
     - name: Köra en funktion som inte utlösts av HTTP manuellt
       href: functions-manually-run-non-http.md
     - name: Felsöka Event Grid-utlösare lokalt
       href: functions-debug-event-grid-trigger-local.md
+    - name: Microsoft Azure for Students Starter
+      href: functions-create-student-starter.md
   - name: Distribuera
     items:
     - name: Kontinuerlig distribution
@@ -287,9 +291,9 @@ items:
     href: https://github.com/Azure/Azure-Functions/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=functions&updatetype=&platform=
-ms.openlocfilehash: 5f2fee7c298b505977742fd105fe6227fa2c2946
-ms.sourcegitcommit: 90c6b63552f6b7f8efac7f5c375e77526841a678
+ms.openlocfilehash: 5519a0d99928bfa1129297f1d88546fd77f7c564
+ms.sourcegitcommit: 8b41b86841456deea26b0941e8ae3fcdb2d5c1e1
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/23/2019
-ms.locfileid: "56734616"
+ms.lasthandoff: 03/05/2019
+ms.locfileid: "57342062"
