--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -657,9 +657,11 @@ items:
       href: platform/grafana-plugin.md
   - name: Analysera data
     items:
-    - name: Skapa måttdiagram i Metrics Explorer
+    - name: Komma igång med Metrics Explorer
+      href: platform/metrics-getting-started.md
+    - name: Avancerade funktioner i Metrics Explorer
       href: platform/metrics-charts.md
-    - name: Diagramexempel i Metric Explorer
+    - name: Exempel på måttdiagram
       href: platform/metric-chart-samples.md
     - name: Visa händelser i aktivitetsloggen
       href: ../azure-resource-manager/resource-group-audit.md
@@ -1032,9 +1034,9 @@ items:
     href: https://stackoverflow.com/search?q=monitoring
   - name: Kodexempel
     href: https://azure.microsoft.com/resources/samples/?service=monitor
-ms.openlocfilehash: cd33e8c02f85884bc47fd2db9a0bb626e181d1e3
-ms.sourcegitcommit: 1afd2e835dd507259cf7bb798b1b130adbb21840
+ms.openlocfilehash: 84cda925280e7497b2538d958a841bba3fc48d60
+ms.sourcegitcommit: 8b41b86841456deea26b0941e8ae3fcdb2d5c1e1
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/28/2019
-ms.locfileid: "56985163"
+ms.lasthandoff: 03/05/2019
+ms.locfileid: "57341314"
