--- a/articles/cost-management/toc.yml
+++ b/articles/cost-management/toc.yml
@@ -25,6 +25,10 @@ items:
       href: cost-mgt-best-practices.md
     - name: Förstå Cost Management-data
       href: understand-cost-mgt-data.md
+    - name: Förstå och arbeta med omfång
+      href: understand-work-scopes.md
+    - name: Migrera från EA till API:er för Microsofts kundavtal
+      href: migrate-cost-management-api.md
   - name: Instruktionsguider
     items:
     - name: Tilldela åtkomst till data
@@ -113,9 +117,9 @@ items:
         href: cost-mgt-faq.md
       - name: Kontakta Cloudyns support
         href: support-request-cost-management.md
-ms.openlocfilehash: ae9155548a839db18fc80f40c12e5264643cea9d
-ms.sourcegitcommit: 415742227ba5c3b089f7909aa16e0d8d5418f7fd
+ms.openlocfilehash: deec8d274f50f2fad6b18141ec924245c3c2f5ec
+ms.sourcegitcommit: 8b41b86841456deea26b0941e8ae3fcdb2d5c1e1
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/06/2019
-ms.locfileid: "55769023"
+ms.lasthandoff: 03/05/2019
+ms.locfileid: "57337863"
