--- a/articles/iot-fundamentals/toc.yml
+++ b/articles/iot-fundamentals/toc.yml
@@ -1,30 +1,12 @@
 items:
-- name: Grunderna i Azure IoT
-  href: index.yml
+- name: Sakernas Internet i Azure
+  href: index.md
 - name: Översikt
   items:
   - name: Introduktion
     href: iot-introduction.md
   - name: Azure IoT-tjänster och tekniker
     href: iot-services-and-technologies.md
-- name: Tjänster
-  items:
-  - name: IoT Hub
-    href: /azure/iot-hub
-  - name: IoT Hub Device Provisioning Service
-    href: /azure/iot-dps
-  - name: IoT-lösningsacceleratorer
-    href: /azure/iot-suite
-  - name: IoT Central
-    href: /azure/iot-central
-  - name: IoT Edge
-    href: /azure/iot-edge
-  - name: Azure Digital Twins
-    href: /azure/digital-twins
-  - name: Azure Maps
-    href: /azure/azure-maps
-  - name: Time Series Insights
-    href: /azure/time-series-insights
 - name: Säkerhet
   items:
   - name: Säkerhetsarkitektur
@@ -35,15 +17,9 @@ items:
     href: iot-security-deployment.md
   - name: Säkerhet från grunden
     href: iot-security-ground-up.md
-- name: SDK:er
-  items:
-  - name: Tjänst-SDK:er
-    href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks
-  - name: SDK:er för IoT-enheter
-    href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks
-ms.openlocfilehash: 82b04e5f6db3142180b1a10264342862793740eb
-ms.sourcegitcommit: 02ce0fc22a71796f08a9aa20c76e2fa40eb2f10a
+ms.openlocfilehash: dc5c08ea2a3376b4213e83495ff1dce697338d82
+ms.sourcegitcommit: 8b41b86841456deea26b0941e8ae3fcdb2d5c1e1
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/08/2018
-ms.locfileid: "51287174"
+ms.lasthandoff: 03/05/2019
+ms.locfileid: "57336724"
