--- a/articles/key-vault/toc.yml
+++ b/articles/key-vault/toc.yml
@@ -17,6 +17,9 @@ items:
     href: quick-create-net.md
   - name: Ange och hämta en hemlighet – Node.js
     href: quick-create-node.md
+  - name: Ange och hämta en hemlighet – mall
+    displayName: resource manager, resource manager template, arm
+    href: quick-create-template.md
   expanded: true
 - name: Självstudier
   items:
@@ -171,9 +174,9 @@ items:
     href: http://blogs.technet.com/b/kv/
   - name: Produktfeedback
     href: https://feedback.azure.com/forums/906355-azure-key-vault
-ms.openlocfilehash: ca44c7d12064c7a458b1718ede2684c58bdab9b8
-ms.sourcegitcommit: 1516779f1baffaedcd24c674ccddd3e95de844de
+ms.openlocfilehash: e4cf443e80ad77e0892b164ecf63aec6afc2a428
+ms.sourcegitcommit: 3f4ffc7477cff56a078c9640043836768f212a06
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/26/2019
-ms.locfileid: "56822573"
+ms.lasthandoff: 03/04/2019
+ms.locfileid: "57308065"
