--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -17,7 +17,11 @@ items:
       href: search-get-started-portal.md
     - name: Förbättra med AI (kognitiv sökning)
       href: cognitive-search-quickstart-blob.md
-  - name: .NET
+  - name: Postman
+    href: search-fiddler.md
+  - name: PowerShell
+    href: search-create-index-rest-api.md
+  - name: C#
     items:
     - name: Skapa ett index
       href: search-create-index-dotnet.md
@@ -25,16 +29,6 @@ items:
       href: search-import-data-dotnet.md
     - name: Search
       href: search-query-dotnet.md
-  - name: REST
-    items:
-    - name: Skapa ett index
-      href: search-create-index-rest-api.md
-    - name: Importera data
-      href: search-import-data-rest-api.md
-    - name: Search
-      href: search-query-rest-api.md
-    - name: Utforska med Postman eller Fiddler
-      href: search-fiddler.md
   expanded: true
 - name: Självstudier
   items:
@@ -294,11 +288,11 @@ items:
   - name: Demowebbplatser
     items:
     - name: Finansiella filer – demo
-      href: http://wolterskluwereap.azurewebsites.net/
+      href: https://wolterskluwereap.azurewebsites.net/
     - name: JFK-filer – demo
-      href: http://aka.ms/jfkfiles
+      href: https://aka.ms/jfkfiles
     - name: Jobblisteapp
-      href: http://aka.ms/azjobsdemo
+      href: https://aka.ms/azjobsdemo
     - name: Sökanalys – demo
       href: https://alice.unearth.ai/
     - name: Sök bland användarsituationer
@@ -309,9 +303,9 @@ items:
     href: https://azure.microsoft.com/pricing/details/search/
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=search
-ms.openlocfilehash: 1d181caf4728f35d3cfcf68c968b4fbedd85a4e8
-ms.sourcegitcommit: 5fbca3354f47d936e46582e76ff49b77a989f299
+ms.openlocfilehash: 9127da44295defc522de45eb53ed7e6541287002
+ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/12/2019
-ms.locfileid: "57764618"
+ms.lasthandoff: 03/18/2019
+ms.locfileid: "57860438"
