--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -117,6 +117,11 @@ items:
     - name: Kräv kryptering för Data Lake Store
       displayName: deny
       href: samples/enforce-data-lake-store-encryption.md
+  - name: Gästkonfiguration
+    items:
+    - name: Granska program installerade på Linux
+      displayName: audit, vm
+      href: samples/guest-configuration-applications-installed-linux.md
   - name: Nyckelvalv
     items:
     - name: Granska valv där slutpunkter i virtuella nätverk saknas
@@ -286,9 +291,9 @@ items:
       href: /powershell/module/az.resources/#policies
     - name: Principinsikter
       href: /powershell/module/az.policyinsights#policy_insights
-    - name: Gästkonfiguration (förhandsversion)
-      href: https://www.powershellgallery.com/packages/AzureRM.GuestConfiguration
-  - name: REST-API
+    - name: Gästkonfiguration
+      href: https://www.powershellgallery.com/packages/Az.GuestConfiguration
+  - name: REST
     items:
     - name: Händelser
       href: /rest/api/policy-insights/policyevents
@@ -304,7 +309,7 @@ items:
       href: /rest/api/policy-insights/policytrackedresources
     - name: Reparationer
       href: /rest/api/policy-insights/remediations
-    - name: Gästkonfiguration (förhandsversion)
+    - name: Gästkonfiguration
       href: /rest/api/guestconfiguration/
   - name: Mallar för Resurshanteraren
     items:
@@ -338,9 +343,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: UserVoice
     href: https://feedback.azure.com/forums/915958-azure-governance
-ms.openlocfilehash: c80c593f025511679cf0739f8f9f40a1097795b9
-ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
+ms.openlocfilehash: 730222484658019c78fb2dfef94c474f3031769b
+ms.sourcegitcommit: 12d67f9e4956bb30e7ca55209dd15d51a692d4f6
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/18/2019
-ms.locfileid: "57900700"
+ms.lasthandoff: 03/20/2019
+ms.locfileid: "58226138"
